--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+  background-color: #3c4556;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -5,7 +13,4 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-h1 {
 }
